fixed little design for messages - spacing

--- a/resources/volontarer-normalize.css
+++ b/resources/volontarer-normalize.css
@@ -234,8 +234,8 @@ h3 {
     font-size: 1.375rem;
     line-height: 26px;
     line-height: 1.625rem;
-    margin-top: 52px;
-    margin-top: 3.25rem;
+    margin-top: 20px;
+    margin-top: 1.25rem;
     margin-bottom: 13px;
     margin-bottom: 0.8125rem;
 }
